chore(quality): introduce SonarQube and resolve quality issues